--- a/src/components/ui/MyDatePicker/MyDatePicker.css
+++ b/src/components/ui/MyDatePicker/MyDatePicker.css
@@ -38,12 +38,9 @@
 .mdp-container {
     float: left;
     position: absolute;
-    left:0;
     top: 40px;
-    width: 363px;
+    width: 300px;
     min-height: 300px;
-    background: #fff;
-    box-shadow: 10px 10px 40px rgba(0,0,0,0.2);
     border-radius: 10px;
     overflow: hidden;
     padding: 15px 10px 10px 10px;
@@ -71,18 +68,17 @@
     box-sizing: border-box;
     position: relative;
 }
-.mdpchb-inner:hover > span{
+/* .mdpchb-inner:hover > span{
     border-color: #555!important;
 } 
 .mdpchb-inner:hover{ 
     cursor: pointer;
     background: #eee;
-}
+} */
 .mdpchb-inner {
     float: left;
     height: 30px;
     width: 30px;
-    background: #f4f4f4;
     border-radius: 100%;
     line-height: 35px;
     text-align: center;
@@ -103,8 +99,12 @@
     float: left;
     width: 6px;
     height: 6px;
-    border-left: 2px solid #888;
-    border-bottom: 2px solid #888;
+    border-left-width: 2px;
+    border-left-style: solid;
+    /* border-left-color: #888; */
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    /* border-bottom-color: #888; */
     position: absolute;
 }
 .mdpchbi-right-arrow,
@@ -150,7 +150,6 @@
     width: 100%;
     height: 23px;
     font-size: 20px;
-    color: #666;
     font-weight: 200px;
     text-align: center;
 }
@@ -159,7 +158,6 @@
     width: 100%;
     height: 15px;
     font-size: 13px;
-    color: #666;
     font-weight: 200px;
     text-align: center;
 }
@@ -223,7 +221,7 @@
     height: 100%;
     font-size: 12px;
     font-weight: 300;
-    color: #444;
+    /* color: #444; */
     text-align: center;
 }
 .cdc-day span{ 
@@ -257,12 +255,12 @@
     color: #ddd;
 }
 .c-day-container.disabled .cdc-day span{
-    background: #fff!important;
+    /* background: #fff!important; */
 }
 .c-day-container.highlight .cdc-day span{
     background: #efdbca;
 }
 .c-day-container.highlight-blue .cdc-day span{
-    background: #1564C0;
+    /* background: #1564C0; */
     color: white;
 }
