--- a/src/components/ui/MyDatePicker/MyDatePicker.css
+++ b/src/components/ui/MyDatePicker/MyDatePicker.css
@@ -1,4 +1,8 @@
 .MyDatePicker {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 200px;
     float: left;
     position: relative;
     z-index: 10;
@@ -68,14 +72,11 @@
     box-sizing: border-box;
     position: relative;
 }
-/* .mdpchb-inner:hover > span{
-    border-color: #555!important;
-} 
-.mdpchb-inner:hover{ 
-    cursor: pointer;
-    background: #eee;
-} */
+
 .mdpchb-inner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     float: left;
     height: 30px;
     width: 30px;
@@ -89,8 +90,6 @@
     margin-top: -17px;
 }
 
-.mdpchbi-right-arrows:after,
-.mdpchbi-left-arrows:after,
 .mdpchbi-right-arrow,
 .mdpchbi-right-arrows,
 .mdpchbi-left-arrow,
@@ -99,46 +98,8 @@
     float: left;
     width: 6px;
     height: 6px;
-    border-left-width: 2px;
-    border-left-style: solid;
-    /* border-left-color: #888; */
-    border-bottom-width: 2px;
-    border-bottom-style: solid;
-    /* border-bottom-color: #888; */
     position: absolute;
-}
-.mdpchbi-right-arrow,
-.mdpchbi-right-arrows,
-.mdpchbi-left-arrow,
-.mdpchbi-left-arrows{
-    transform: rotate(45deg);
-    left: 50%;
-    top:50%;
-    margin-left: -2px;
-    margin-top: -4px;
-}
-.mdpchbi-right-arrows,
-.mdpchbi-right-arrow {
-    transform: rotate(225deg);
-    margin-left: -4px;
-}
-.mdpchbi-right-arrows:after,
-.mdpchbi-left-arrows:after{
-    content: '';
-}
-
-.mdpchbi-left-arrows{
-    margin-left: -5px;
-}
-.mdpchbi-right-arrows{
-    margin-left: -2px;
-}
-.mdpchbi-right-arrows:after,
-.mdpchbi-left-arrows:after{
-    left: 3px;
-    top: -5px
-}
- 
+} 
 
 .mdpch-container{
     float: left;
@@ -253,12 +214,6 @@
 
 .c-day-container.disabled .cdc-day span{
     color: #ddd;
-}
-.c-day-container.disabled .cdc-day span{
-    /* background: #fff!important; */
-}
-.c-day-container.highlight .cdc-day span{
-    background: #efdbca;
 }
 .c-day-container.highlight-blue .cdc-day span{
     /* background: #1564C0; */
